--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,13 +1,13 @@
-@import "./reset.scss";
+@import "reset";
 @import "./variables/global";
-@import "./themes/normal";
+@import "./themes/light";
 @import "./themes/dark";
 
 .app {
-  font: var(--font-m);
+    font: var(--font-m);
 
-  background: var(--bg-color);
-  color: var(--primary-color);
+    background: var(--bg-color);
+    color: var(--primary-color);
 
-  min-height: 100vh;
+    min-height: 100vh;
 }
