--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,13 +1,20 @@
-@import "reset";
+@import "./reset";
 @import "./variables/global";
 @import "./themes/light";
 @import "./themes/dark";
 
 .app {
     font: var(--font-m);
-
     background: var(--bg-color);
     color: var(--primary-color);
-
     min-height: 100vh;
+}
+
+.content-page {
+    display: flex;
+}
+
+.page {
+    flex-grow: 1;
+    padding: 20px;
 }
