[feat] add ErrorPage an ErrorBoundary

--- a/src/shared/ui/Spinner/Spinner.module.scss
+++ b/src/shared/ui/Spinner/Spinner.module.scss
@@ -1,5 +1,5 @@
 .Spinner {
-    position: fixed;
+    position: relative;
     top: calc(50% - 40px);
     left: calc(50% - 40px);
     border: 5px solid #f3f3f3;
