--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,5 +1,9 @@
 .Button {
     cursor: pointer;
+    color: var(--primary-color);
+    align-items: center;
+    justify-content: center;
+    max-height: fit-content;
 }
 
 .clear {
@@ -7,4 +11,14 @@
     border: none;
     background: none;
     outline: none;
+    display: flex;
+}
+
+.secondary {
+    display: flex;
+    background: var(--bg-color);
+    color: var(--primary-color);
+    border: solid 1px var(--inverted-bg-color);
+    border-radius: 12px;
+    padding: 5px;
 }
