--- a/src/shared/ui/Spinner/Spinner.module.scss
+++ b/src/shared/ui/Spinner/Spinner.module.scss
@@ -1,23 +1,74 @@
 .Spinner {
-    position: relative;
-    top: calc(50% - 40px);
-    left: calc(50% - 40px);
-    border: 8px solid var(--bg-color);
-    border-top: 8px solid var(--inverted-bg-color);
-    border-radius: 50%;
-    background-color: #04ff04;
-    margin: 0;
-    width: 80px;
-    height: 80px;
-    animation: spin 1s linear infinite;
+    min-height: calc(100vh - var(--navbar-height));
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
 }
 
-@keyframes spin {
+.lds-ellipsis {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+}
+
+.lds-ellipsis div {
+    position: absolute;
+    top: 33px;
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    background: var(--inverted-bg-color);
+    animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+
+.lds-ellipsis div:nth-child(1) {
+    left: 8px;
+    animation: lds-ellipsis1 0.6s infinite;
+}
+
+.lds-ellipsis div:nth-child(2) {
+    left: 8px;
+    animation: lds-ellipsis2 0.6s infinite;
+}
+
+.lds-ellipsis div:nth-child(3) {
+    left: 32px;
+    animation: lds-ellipsis2 0.6s infinite;
+}
+
+.lds-ellipsis div:nth-child(4) {
+    left: 56px;
+    animation: lds-ellipsis3 0.6s infinite;
+}
+
+@keyframes lds-ellipsis1 {
     0% {
-        transform: rotate(0deg);
+        transform: scale(0);
     }
 
     100% {
-        transform: rotate(360deg);
+        transform: scale(1);
+    }
+}
+
+@keyframes lds-ellipsis3 {
+    0% {
+        transform: scale(1);
+    }
+
+    100% {
+        transform: scale(0);
+    }
+}
+
+@keyframes lds-ellipsis2 {
+    0% {
+        transform: translate(0, 0);
+    }
+
+    100% {
+        transform: translate(24px, 0);
     }
 }
