--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -20,6 +20,6 @@
 
     // overlay-color
     --overlay-color: rgba(0 0 0 / 60%);
-    --red-light: red;
+    --red-light: #f00;
     --red-dark: #ce0505;
 }
