--- a/src/pages/ArticleDetalePage/ui/ArticleDetailPage/ArticleDetailPage.module.scss
+++ b/src/pages/ArticleDetalePage/ui/ArticleDetailPage/ArticleDetailPage.module.scss
@@ -5,3 +5,12 @@
 .commentTitle {
     margin-top: 20px;
 }
+
+.recommendations {
+    margin-top: 20px;
+    padding-bottom: 20px;
+    flex-wrap: nowrap;
+    display: flex;
+    overflow-x: auto;
+    overflow-y: hidden;
+}
