[sys] add virtualisation for articles list

--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -15,3 +15,11 @@ select {
 a {
     text-decoration: none;
 }
+
+.ce-toolbar__content {
+    margin: 0;
+}
+
+.codex-editor--narrow .ce-toolbar__actions {
+    right: 0;
+}
