--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,9 +1,11 @@
 :root {
     --font-family-main: consolas, "Times New Roman", serif;
+
     // s
-    --font-size-m: 12px;
-    --font-line-m: 20px;
-    --font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
+    --font-size-s: 12px;
+    --font-line-s: 20px;
+    --font-s: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
+
     // m
     --font-size-m: 16px;
     --font-line-m: 24px;
@@ -13,6 +15,7 @@
     --font-size-l: 24px;
     --font-line-l: 32px;
     --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
+
     // xl
     --font-size-xl: 32px;
     --font-line-xl: 40px;
