[ref] continue redesign

--- a/src/shared/ui/redesigned/AppLogo/AppLogo.module.scss
+++ b/src/shared/ui/redesigned/AppLogo/AppLogo.module.scss
@@ -2,6 +2,11 @@
     position: relative;
 }
 
+.logo {
+    position: relative;
+    z-index: 100;
+}
+
 .gradientBig {
     position: absolute;
     background:
