--- a/src/shared/ui/redesigned/Button/Button.module.scss
+++ b/src/shared/ui/redesigned/Button/Button.module.scss
@@ -47,6 +47,16 @@
     border-radius: 34px;
 }
 
+.outline {
+    background: var(--light-bg-redesigned);
+    border: 1px solid var(--icon-redesigned);
+    border-radius: 34px;
+
+    &:hover {
+        border: 1px solid var(--accent-redesigned);
+    }
+}
+
 .square.m {
     width: var(--font-line-m);
     height: var(--font-line-m);
