--- a/src/shared/ui/redesigned/Text/Text.module.scss
+++ b/src/shared/ui/redesigned/Text/Text.module.scss
@@ -74,3 +74,19 @@
         font-weight: 700;
     }
 }
+
+.start {
+    align-self: start;
+}
+
+.end {
+    align-self: end;
+}
+
+.centered {
+    align-self: center;
+}
+
+.auto {
+    align-self: auto;
+}
