--- a/src/shared/ui/redesigned/Stack/Flex/Flex.module.scss
+++ b/src/shared/ui/redesigned/Stack/Flex/Flex.module.scss
@@ -19,7 +19,7 @@
 }
 
 .alignStart {
-    align-items: flex-start;
+    align-items: start;
 }
 
 .alignCenter {
@@ -27,7 +27,7 @@
 }
 
 .alignEnd {
-    align-items: flex-end;
+    align-items: end;
 }
 
 .directionRow {
