[feat] add toolbar, some fix and redesigned

--- a/src/widgets/Sidebar/ui/SidebarItemRedesigned/SidebarItemRedesigned.module.scss
+++ b/src/widgets/Sidebar/ui/SidebarItemRedesigned/SidebarItemRedesigned.module.scss
@@ -11,6 +11,12 @@
     opacity: 1;
 }
 
+.icon {
+    &:hover {
+        color: var(--accent-redesigned);
+    }
+}
+
 .collapsed {
     padding: 0;
     justify-content: center;
