--- a/src/widgets/ScrollToolbar/ui/ScrollToolbar/ScrollToolbar.module.scss
+++ b/src/widgets/ScrollToolbar/ui/ScrollToolbar/ScrollToolbar.module.scss
@@ -1,3 +1,12 @@
 .ScrollToolbar {
     height: 100%;
 }
+
+.btnColor {
+    border: 1px solid var(--accent-redesigned);
+    border-radius: 50%;
+
+    &:hover {
+        opacity: 0.8;
+    }
+}
