[feat] redesign continuation, add pictures to main page, improve article editing

--- a/src/entities/Article/ui/ArticleTextBlockComponent/ArticleTextBlockComponent.module.scss
+++ b/src/entities/Article/ui/ArticleTextBlockComponent/ArticleTextBlockComponent.module.scss
@@ -1,7 +1,19 @@
-.title {
-    margin-bottom: 16px;
+.gap4 {
+    gap: 4px;
 }
 
-.paragraph {
-    margin-top: 8px;
+.gap8 {
+    gap: 8px;
+}
+
+.gap16 {
+    gap: 16px;
+}
+
+.gap24 {
+    gap: 24px;
+}
+
+.gap32 {
+    gap: 32px;
 }
