--- a/src/shared/ui/redesigned/Code/Code.module.scss
+++ b/src/shared/ui/redesigned/Code/Code.module.scss
@@ -13,12 +13,14 @@
     background: var(--light-bg-redesigned);
     overflow: auto;
     border-radius: 16px;
+    white-space: pre;
+    width: 100%;
 }
 
 .copyBtn {
     position: absolute;
-    right: 20px;
-    top: 20px;
+    right: 10px;
+    top: 10px;
 }
 
 .copyIcon path {
