--- a/src/shared/ui/redesigned/Card/Card.module.scss
+++ b/src/shared/ui/redesigned/Card/Card.module.scss
@@ -15,6 +15,10 @@
     background: var(--light-bg-redesigned);
 }
 
+.none {
+    border-radius: 0;
+}
+
 .standard {
     border-radius: 12px;
 }
@@ -35,6 +39,10 @@
     gap: 0;
 }
 
+.gap_4 {
+    gap: 4px;
+}
+
 .gap_8 {
     gap: 8px;
 }
@@ -53,6 +61,10 @@
 
 .pad_0 {
     padding: 0;
+}
+
+.pad_4 {
+    padding: 4px;
 }
 
 .pad_8 {
