--- a/src/pages/ArticleEditPage/ui/ArticleEditPageContainer/ArticleEditPageContainer.module.scss
+++ b/src/pages/ArticleEditPage/ui/ArticleEditPageContainer/ArticleEditPageContainer.module.scss
@@ -1,3 +1,6 @@
 .ArticleEditPageContainer {
     border: none;
+    background: var(--light-bg-redesigned);
+    box-sizing: border-box;
+    min-width: 220px;
 }
