--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,3 +1,5 @@
+@import "animate.css";
+
 :root {
     --font-family-main: consolas, "Times New Roman", serif;
     --font-family-text-redesigned: "Nunito Sans", sans-serif;
