[ref] upgrade main page, some fix

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -4,6 +4,7 @@
     --font-family-main: consolas, "Times New Roman", serif;
     --font-family-text-redesigned: "Nunito Sans", sans-serif;
     --font-family-header-redesigned: "Roboto", sans-serif;
+    --font-family-tags: "La Belle Aurore", cursive;
 
     // s
     --font-size-s: 12px;
