--- a/src/shared/ui/redesigned/Text/Text.module.scss
+++ b/src/shared/ui/redesigned/Text/Text.module.scss
@@ -75,6 +75,13 @@
     }
 }
 
+.cursive {
+    .title,
+    .text {
+        font-family: var(--font-family-tags);
+    }
+}
+
 .start {
     align-self: start;
 }
