[feat] add tags layout, some fix

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -29,4 +29,7 @@
     --save-redesigned: #6cd98b;
     --icon-redesigned: #74a2b2;
     --accent-redesigned: #5ed3f3;
+
+    // tags
+    --tag-color: #ffd700;
 }
