--- a/src/widgets/AboutPageInfoBlock/ui/AboutPageInfoBlock/AboutPageInfoBlock.module.scss
+++ b/src/widgets/AboutPageInfoBlock/ui/AboutPageInfoBlock/AboutPageInfoBlock.module.scss
@@ -3,7 +3,7 @@
     font-size: 4rem;
     line-height: 3rem;
     margin: 0;
-    font-family: Coolvetica, fantasy;
+    font-family: Coolvetica, monospace;
     font-weight: 500;
 }
 
