--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -29,4 +29,7 @@
     --save-redesigned: #62de85;
     --icon-redesigned: #5ed3f3;
     --accent-redesigned: #00c8ff;
+
+    // tag
+    --tag-color: #0232c2;
 }
