--- a/src/shared/ui/redesigned/Textarea/Textarea.module.scss
+++ b/src/shared/ui/redesigned/Textarea/Textarea.module.scss
@@ -11,6 +11,7 @@
     display: block;
     min-width: 500px;
     margin: 0 0 5px;
+    word-wrap: break-word;
 
     &::placeholder {
         color: var(--hint-redesigned);
