--- a/src/widgets/ArticlesFilters/ui/ArticlesFilters/ArticlesFilters.module.scss
+++ b/src/widgets/ArticlesFilters/ui/ArticlesFilters/ArticlesFilters.module.scss
@@ -6,3 +6,11 @@
     gap: 8px;
     justify-self: left;
 }
+
+.cardLink {
+    justify-content: center;
+}
+
+.cardLink > :first-child {
+    padding: 20px;
+}
