[feat] add success modal, some fix and improve

--- a/src/shared/ui/redesigned/Modal/Modal.module.scss
+++ b/src/shared/ui/redesigned/Modal/Modal.module.scss
@@ -41,6 +41,10 @@
     .content {
         background: var(--light-bg-redesigned);
     }
+
+    .clearBack {
+        background: none;
+    }
 }
 
 .modalOld {
