--- a/src/shared/ui/redesigned/Text/Text.module.scss
+++ b/src/shared/ui/redesigned/Text/Text.module.scss
@@ -26,6 +26,16 @@
     }
 }
 
+.success {
+    .title {
+        color: var(--save-redesigned);
+    }
+
+    .text {
+        color: var(--save-redesigned);
+    }
+}
+
 .tag {
     .title {
         color: var(--tag-color);
