--- a/src/widgets/AboutPageInfoBlock/ui/AboutPageInfoBlock/AboutPageInfoBlock.module.scss
+++ b/src/widgets/AboutPageInfoBlock/ui/AboutPageInfoBlock/AboutPageInfoBlock.module.scss
@@ -11,6 +11,10 @@
     width: 100%;
 }
 
+.link {
+    padding-left: 5px;
+}
+
 @media (max-width: 850px) {
     .sertificate {
         width: 150px;
