--- a/src/features/AnimatedLetters/ui/AnimatedLetters/AnimatedLetters.module.scss
+++ b/src/features/AnimatedLetters/ui/AnimatedLetters/AnimatedLetters.module.scss
@@ -28,6 +28,6 @@
 
 @for $i from 1 through 55 {
     .text-animate._#{$i} {
-        animation-delay: #{$i / 10}s;
+        animation-delay: calc($i / 10)s;
     }
 }
