[fix] try some fixe

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -4,6 +4,7 @@
 @import "./themes/dark";
 @import "./themes/lilac";
 @import "./themes/orange";
+@import 'animate.css';
 
 .app {
     background: var(--bg-color);
