[feat] add accounts links, some fix

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -20,7 +20,7 @@
     --listbox-bg: #0f0f78;
 
     // redesigned
-    --dark-bg-redesigned: #090f11;
+    --dark-bg-redesigned: #1f353c;
     --bg-redesigned: #0c1214;
     --light-bg-redesigned: #151c1f;
     --text-redesigned: #dbdbdb;
