--- a/src/app/styles/themes/lilac.scss
+++ b/src/app/styles/themes/lilac.scss
@@ -20,15 +20,15 @@
     --listbox-bg: #695bac;
 
     // redesigned
-    --dark-bg-redesigned: #fff;
-    --bg-redesigned: #eff5f6;
-    --light-bg-redesigned: #e2eef1;
+    --dark-bg-redesigned: #b8adf2;
+    --bg-redesigned: #7566c1;
+    --light-bg-redesigned: #bdffff;
     --text-redesigned: #141c1f;
-    --hint-redesigned: #adbcc0;
+    --hint-redesigned: #96fdfd;
     --cancel-redesigned: #f77;
     --save-redesigned: #62de85;
     --icon-redesigned: #5ed3f3;
-    --accent-redesigned: #00c8ff;
+    --accent-redesigned: #fb31e0;
 
     // tag
     --tag-color: #0232c2;
