--- a/src/widgets/AboutPageInfoBlock/ui/AboutPageInfoBlock/AboutPageInfoBlock.module.scss
+++ b/src/widgets/AboutPageInfoBlock/ui/AboutPageInfoBlock/AboutPageInfoBlock.module.scss
@@ -1,14 +1,25 @@
+.aboutPageInfo {
+    min-width: 700px;
+}
+
+.text {
+    text-indent: 30px;
+    hyphens: auto;
+    text-align: justify;
+}
+
 .letters {
     color: var(--text-redesigned);
     font-size: 4rem;
     line-height: 3rem;
-    margin: 0;
+    margin: 0 0 0 30px;
     font-family: Coolvetica, monospace;
     font-weight: 500;
 }
 
 .sertificate {
     width: 100%;
+    max-width: 250px;
 }
 
 .link {
