[ref] refactor contact page and about page some fix

--- a/src/pages/ContactsPage/ContactsPage/ContactsPage.module.scss
+++ b/src/pages/ContactsPage/ContactsPage/ContactsPage.module.scss
@@ -5,3 +5,16 @@
 .tel::before {
     content: "📞 ";
 }
+
+.img {
+    border-radius: 50%;
+    align-self: center;
+}
+
+.text {
+    align-self: center;
+}
+
+a {
+    color: blue;
+}
