--- a/src/widgets/AboutPageInfoBlock/ui/AboutPageInfoBlock/AboutPageInfoBlock.module.scss
+++ b/src/widgets/AboutPageInfoBlock/ui/AboutPageInfoBlock/AboutPageInfoBlock.module.scss
@@ -23,7 +23,8 @@
 }
 
 .link {
-    padding-left: 5px;
+    padding-left: 3px;
+    color: var(--icon-redesigned);
 }
 
 @media (max-width: 850px) {
