--- a/src/features/Contacts/ui/AddressBlock/AddressBlock.module.scss
+++ b/src/features/Contacts/ui/AddressBlock/AddressBlock.module.scss
@@ -9,10 +9,18 @@
 .img {
     border-radius: 50%;
     align-self: center;
+    max-width: 450px;
+}
+
+.imgContainer {
+    max-width: 450px;
+    min-width: 150px;
+    display: contents;
 }
 
 .text {
     align-self: center;
+    text-align: center;
 }
 
 a {
