--- a/src/shared/ui/redesigned/Button/Button.module.scss
+++ b/src/shared/ui/redesigned/Button/Button.module.scss
@@ -144,18 +144,21 @@
     font: var(--font-xl-redesigned);
 }
 
-.l {
-    font: var(--font-l-redesigned);
+.s {
+    font: var(--font-s-redesigned);
 }
 
-.xl {
-    font: var(--font-xl-redesigned);
+.l {
+    font: var(--font-l-redesigned);
 }
 
 .m {
     font: var(--font-m-redesigned);
 }
 
+.xl {
+    font: var(--font-xl-redesigned);
+}
 .disabled {
     opacity: 0.5;
 }
