--- a/src/shared/ui/redesigned/Text/Text.module.scss
+++ b/src/shared/ui/redesigned/Text/Text.module.scss
@@ -76,6 +76,16 @@
     .text {
         font: var(--font-m-redesigned);
     }
+
+    @media screen and (max-width: 768px) {
+        .title {
+            font: var(--font-m-redesigned);
+        }
+
+        .text {
+            font: var(--font-s-redesigned);
+        }
+    }
 }
 
 .size_l {
@@ -85,6 +95,16 @@
 
     .text {
         font: var(--font-l-redesigned);
+    }
+
+    @media screen and (max-width: 768px) {
+        .title {
+            font: var(--font-l-redesigned);
+        }
+
+        .text {
+            font: var(--font-m-redesigned);
+        }
     }
 }
 
